<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textSize="30dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/colorTextView"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subtitle"
            android:textSize="15dp"
            android:textAlignment="center"
            android:textStyle="italic"
            android:textColor="@color/colorTextView"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/email"
            android:id="@+id/email"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:hint="@string/password"
            android:id="@+id/password"
            android:inputType="textPassword"
            />
        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorButton"
            android:text="Login"
            android:textColor="#fff"
            android:textSize="20dp" />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="5dp">
            <TextView
                android:id="@+id/signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:linksClickable="true"
                android:text="@string/sign_up"
                android:textColor="@color/colorTextView"
                android:textSize="16sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/forgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:linksClickable="true"
                android:text="@string/forget_password"
                android:textColor="@color/colorTextView"
                android:textSize="16sp"
                android:textStyle="bold" />
        </FrameLayout>
    </LinearLayout>


</RelativeLayout>
