<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_centerInParent="true">


        <!--<TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Sign_up_title"
            android:textAlignment="center"
            android:textColor="@color/colorTextView"
            android:textSize="30dp"
            android:textStyle="bold" />-->

        <EditText
            android:id="@+id/SignUpEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/SignUpNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:hint="Phone number"
            android:inputType="phone" />

        <EditText
            android:id="@+id/SignUpName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:hint="@string/name" />


        <EditText
            android:id="@+id/SignUpPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:hint="@string/password"
            android:inputType="textPassword" />
        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:hint="Confirm password"
            android:inputType="textPassword" />
        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorButton"
            android:text="Sign up"
            android:textColor="#fff"
            android:textSize="20dp" />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="5dp">
            <TextView
                android:id="@+id/signUpToLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:linksClickable="true"
                android:text="@string/already_have_account"
                android:textColor="#000"
                android:textSize="16sp"
                android:textStyle="bold" />
        </FrameLayout>
    </LinearLayout>


</RelativeLayout>
